tests/toy/neg/000753_mutation.toylang
program a = { a = 0 do; } .
